<resources>
    <string name="app_name">SIT Parents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SIT Parents</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="description">DESCRIPTION</string>
    <string name="post_title">POST TITLE</string>
    <string name="posted_at">Posted At:</string>
    <string name="todo">TODO</string>
    <string name="sit_parent_app">SIT Parent App</string>
    <string name="home">Home</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="search_by_title">Search by Title</string>
    <string name="courses">Courses Offered</string>
    <string name="vision_amp_mission">Vision &amp; Mission</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_mission">Our Mission</string>
    <string name="about">About</string>
</resources>