<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/co"
            android:title="@string/courses" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/vis"
            android:title="@string/vision_amp_mission" />
        <item
            android:id="@+id/abo"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>
    <!--<item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/shar"
                android:title="@string/share" />
        </menu>
    </item> -->
</menu>
