<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350sp"
    android:id="@+id/rl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="15sp"
    android:layout_marginTop="15sp"
    android:layout_marginRight="15sp"
    android:layout_marginLeft="15sp"
    android:paddingBottom="5sp"
    android:background="#fff"
    android:elevation="90dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl1"
        android:layout_height="340dp">
        <ImageView
            android:id="@+id/post_image"
            android:layout_width="wrap_content"
            android:layout_height="230sp"
            android:scaleType="fitXY"
            android:alpha="0.1"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/image"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription"
            android:layout_height="230sp"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_title"
            android:layout_below="@id/post_image"
            android:maxLines="2"
            android:text="@string/post_title"
            android:layout_marginTop="15sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15sp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="15sp"
            android:elevation="10sp">
            <ImageView
                android:id="@+id/RI"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:scaleType="fitXY"
                android:layout_gravity="right"
                android:contentDescription="@string/todo"
                tools:ignore="RtlHardcoded" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/post_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/post_title"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15sp"
            android:text="@string/description" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rela"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10sp"
            android:paddingStart="15sp"
            tools:ignore="RtlSymmetry">
        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="10sp"
            tools:ignore="RelativeOverlap,RtlSymmetry,SmallSp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/share"
            android:layout_marginEnd="15sp"
            android:src="@drawable/shar"
            android:contentDescription="@string/todo" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>